--- a/props/src/App.css
+++ b/props/src/App.css
@@ -1,38 +1,107 @@
-.App {
+HTML CSS Babel 
+
+Result
+Skip Results Iframe
+
+EDIT ON
+
+.darumadrop-one-regular {
+  font-family: "Darumadrop One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+* {
+box-sizing: border-box;
+}
+
+body {
+margin: 0;
+font-family: 'Darumadrop One', serif;
+}
+
+
+.App{
+width: 100%;
+height:100vh;
+padding: 50px;
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.albumCover {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  background-color: white;
+  width: 40%;
+  height: 90%;
+  padding-top: 2%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
+}
+
+.loading {
+  font-size: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.coverImage {
+  width: calc(100% - 10%);
+  height: calc(100% - 25%);
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.artistInfo {
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.artistName {
+  font-size: 1.6em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.monthly {
+  font-size: 1.2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.followButton {
+  width: 20%;
+  height: 6%;
+  font-family: 'Darumadrop One', serif;
+  font-size: 1.2em;
+  text-align: center;
   color: white;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  border: none;
+  box-shadow: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
