--- a/props/src/App.css
+++ b/props/src/App.css
@@ -39,6 +39,15 @@ align-items: center;
   height: 100vh;
 }
 
+.infoPanel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .albumCover {
   display: flex;
   justify-content: start;
@@ -51,6 +60,7 @@ align-items: center;
   padding-top: 2%;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
+  flex-shrink: 1;
 }
 
 .loading {
@@ -78,6 +88,7 @@ align-items: center;
 .artistInfo {
   width: 100%;
   text-align: center;
+  flex-shrink: 1;
 }
 
 .artistName {
@@ -90,7 +101,7 @@ align-items: center;
 
 .followButton {
   width: 20%;
-  height: 6%;
+  height: 20%;
   font-family: 'Darumadrop One', serif;
   font-size: 1.2em;
   text-align: center;
@@ -102,6 +113,7 @@ align-items: center;
   border-radius: 15px;
   border: none;
   box-shadow: none;
+  flex-shrink: 1;
 }
 
 
