--- a/functions/src/index.css
+++ b/functions/src/index.css
@@ -1,13 +1,123 @@
+@import url('https://fonts.cdnfonts.com/css/uber-move-text');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Uber Move Text', sans-serif;
+  font-weight: 500;
+  letter-spacing: 1px;
+  background-color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.logoContainer {
+  background-color: black;
+  width: 50%;
+  height: 10vh;
+  border: 1px solid black;
+}
+
+.logoContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: left;
+}
+
+.headerContainer {
+  background-color: rgb(0, 0, 0);
+  width: 50%;
+  height: auto;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nameContainer {
+  width: 100%;
+}
+
+.name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #ffffff;
+  font-size: 1.6em;
+  margin: 5px 0;
+}
+
+.car {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #8f8f8f;
+  font-size: 1em;
+  margin: 10px 0;
+}
+
+.statsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.statsContainer div {
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.statsTop {
+  color: #ffffff;
+  text-align: center;
+  font-size: 1.6em;
+  margin-bottom: 0px;
+}
+
+.statsBot {
+  color: #8f8f8f;
+  text-align: center;
+}
+
+.imageContainer {
+  width: 15%;
+  height: 100%;
+}
+
+.profileImage {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.bodyContainer {
+  background-color: white;
+  width: 50%;
+  height: 50vh;
+  border: 1px solid black;
+}
+
+.detailsContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.detailsContainer div {
+  display: flex;
+  flex-direction: row;
+}
+
+.detailsContainer div > img {
+  width: 2%;
+  height: 2%;
 }
