--- a/functions/src/index.css
+++ b/functions/src/index.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.cdnfonts.com/css/uber-move-text');
+@import url('https://fonts.cdnfonts.com/css/uber-move-2');
 
 body {
   margin: 0;
-  font-family: 'Uber Move Text', sans-serif;
-  font-weight: 500;
+  font-family: 'Uber Move', sans-serif;
   letter-spacing: 1px;
   background-color: white;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
 }
 
 .mainContainer {
@@ -13,13 +17,13 @@ body {
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  width: 40%;
 }
 
 .logoContainer {
   background-color: black;
-  width: 50%;
+  width: 100%;
   height: 10vh;
-  border: 1px solid black;
 }
 
 .logoContainer > img {
@@ -31,9 +35,8 @@ body {
 
 .headerContainer {
   background-color: rgb(0, 0, 0);
-  width: 50%;
+  width: 100%;
   height: auto;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,22 +105,88 @@ body {
 
 .bodyContainer {
   background-color: white;
-  width: 50%;
+  width: 100%;
   height: 50vh;
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bodyContainer span {
+  color: #8f8f8f;
 }
 
 .detailsContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 45%;
+  margin-top: 20px;
 }
 
 .detailsContainer div {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin: 10px 0;
 }
 
 .detailsContainer div > img {
-  width: 2%;
-  height: 2%;
+  width: 20px;
+  height: auto;
+  min-width: 20px;
+  margin-right: 30px;
+}
+
+.double {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  border: none;
+  background-color: #8f8f8f;
+  margin: 10px 0;
+}
+
+.socialContainer {
+  display: flex;
+  gap: 100px;
+  margin-top: 20px;
+}
+
+.socialImageContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.socialImageContainer img {
+  width: 100%;
+  max-width: 40px;
+  height: auto;
+}
+
+@media (max-width: 800px) {
+  .mainContainer {
+    width: 80%;
+  }
+
+  .detailsContainer {
+    width: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .mainContainer {
+    width: 100%;
+  }
+
+  .detailsContainer {
+    width: 90%;
+  }
 }
