--- a/state/src/App.css
+++ b/state/src/App.css
@@ -5,38 +5,79 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.heading span {
+  font-size: 1.6em;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subHeading span {
+  color: #959595;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.profileCard {
+  display: flex;
+  margin: 20px 0;
 }
 
-.card {
-  padding: 2em;
+.name {
+  color: #a9cb87; 
 }
 
-.read-the-docs {
-  color: #888;
+.location {
+  display: flex;
+}
+
+.location div :nth-child(1){
+  margin-right: 20px;
+}
+
+.profileImage {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.profileImage img {
+  border-radius: 50%;
+  width: 50%;
+}
+
+.profileDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+}
+
+.selectProfileIcon {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.selectProfileIcon img {
+  width: 35%;
+}
+
+.inviteEmail {
+  width: 100%;
+}
+
+.inviteEmail input {
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 5px;
+  height: 40px;
+  background-color: white;
+  color: #959595;
+  border: 1px solid #959595;
+}
+
+.footer button {
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+  background-color: #ea4c88;
+  border: 2px solid #c94978;
+  border-radius: 5px;
 }
