--- a/weatherAPI/css/style.css
+++ b/weatherAPI/css/style.css
@@ -9,3 +9,43 @@ h5,h6,p{
 h6{
    padding-top: 30px;
 }
+
+.input-group{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+}
+
+.inner{
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
+   width: 30%;
+}
+
+.outerWeatherParent{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   height: 50vh;
+}
+
+.weatherParent{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   border: 1px solid black;
+   border-radius: 15px;
+   margin: 20px;
+   width: 30%;
+}
+
+#weather{
+   margin: 20px;
+}
+
+.locationValidation{
+   color: red;
+   margin-top: 20px;
+}
